added user model and tested login and register endpoint, added destination model and views

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pylint = "*"
 autopep8 = "*"
 djangorestframework = "*"
 django-environ = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
