--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
