--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ autopep8 = "*"
 djangorestframework = "*"
 django-environ = "*"
 djangorestframework-simplejwt = "*"
+django-on-heroku = "*"
 
 [dev-packages]
 
